--- a/stylesheets/css/extra.css
+++ b/stylesheets/css/extra.css
@@ -54,3 +54,24 @@ h1 .fade-in {
     padding-top: 0em;
     margin-top: 0em;
 }
+
+/* iPhone ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+    /* Styles */
+    #main .row .col-sm-7{
+        font-size: 2em;
+    }
+    
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
+    .container-fluid{
+        padding-right: 0em;
+        padding-left: 0em; 
+    }
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
+    margin-bottom: 1.2em;
+}
