--- a/stylesheets/sass/site.sass
+++ b/stylesheets/sass/site.sass
@@ -3,8 +3,9 @@ body
 
 .logo
 	img
-		width: 20em
+		width: auto
 		margin-top: -2em
+		margin-left: 4em
 
 
 .nav-fluidics
@@ -102,7 +103,7 @@ body
 
 
 	.row
-		.col-sm-2
+		.col-sm-4.col-lg-2
 			text-align: center
 			line-height: 80px
 
@@ -193,3 +194,5 @@ body
 	position: absolute
 	.popover
 		width: 10em
+
+
